--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --config jest.config.mjs --watch"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "next": "15.1.8",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
