--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test:watch": "jest --config jest.config.mjs --watch"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.8",
     "@vercel/analytics": "^1.5.0",
-    "next": "15.1.8",
+    "next": "^15.3.2",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
